--- a/01-service.qmd
+++ b/01-service.qmd
@@ -1,5 +1,5 @@
 ---
-title: "REDCap Service Overview"
+title: "The REDCap Service Overview"
 subtitle: "A Summary of the Cave Hill REDCap Data Platform"
 author: Ian R Hambleton
 date: last-modified
@@ -7,9 +7,11 @@ date-format: "D MMM YYYY"
 draft: false
 ---
 
+## Introduction 
+
 This document describes the REDCap service operated for The University of the West Indies (UWI), Cave Hill, and the institutional responsibilities associated with its operation.
 
-REDCap is a secure, web-based data capture platform developed and licensed by Vanderbilt University under a non-profit end-user licence agreement. UWI participates in the REDCap Consortium and operates REDCap in accordance with Vanderbilt’s licensing terms, governance expectations, and community standards.
+REDCap is a secure, web-based data capture platform developed and licensed by Vanderbilt University under a non-profit end-user licence agreement. UWI participates in the REDCap Consortium and operates REDCap in accordance with [Vanderbilt’s licensing terms](https://projectredcap.org/join/termsofuse/), governance expectations, and community standards.
 
 The UWI REDCap instance has been project-managed by the [CaribData project](docs.caribdata.org) and hosted on dedicated infrastructure provided by [HIPAA-Vault](hipaavault.com) .
 
@@ -26,9 +28,11 @@ The service enables UWI researchers and operational teams to:
 
 These capabilities align with Vanderbilt’s definition of REDCap as a metadata-driven platform designed to support secure research and operational data workflows at scale.
 
+**Crucially for researchers, this instance of REDCap is hosted on a GDPR-compliant server environment.**
+
 ## Hosting and infrastructure responsibilities
 
-The REDCap application is hosted on dedicated servers managed by HIPAA-Vault under a commercial hosting and support agreement with UWI. Under this arrangement, HIPAA-Vault is responsible for:
+The REDCap application is hosted on dedicated servers managed by HIPAA-Vault under a commercial [hosting and support agreement](./assets/HIPAAVault-Sales-Agreement.pdf) with UWI. Under this arrangement, HIPAA-Vault is responsible for:
 
 - server provisioning and maintenance;
 - operating system patching and upgrades;
@@ -46,6 +50,8 @@ Vanderbilt University licenses REDCap software to UWI but does not provide hosti
 - documentation and community resources;
 - training materials and videos;
 - peer support via the REDCap community.
+
+Any new UWI REDCap administrator should apply to Vanderbilt University to join the REDCap [Community Site](https://projectredcap.org/resources/community/).
 
 All operational responsibility for this instance lies with UWI and its service partners. This distinction is critical when planning support, staffing, and continuity arrangements.
 
