--- a/10-admin.qmd
+++ b/10-admin.qmd
@@ -1,5 +1,5 @@
 ---
-title: "REDCap Administration"
+title: "REDCap Administration Overview"
 subtitle: "Administration of users and projects"
 author: Ian R Hambleton
 date: last-modified
@@ -7,40 +7,47 @@ date-format: "D MMM YYYY"
 draft: false
 ---
 
+## Introduction 
+
 This section describes how user access and REDCap projects are administered for the University of the West Indies (UWI) REDCap service.
 
-Administrative functions are exercised on behalf of the institution. They exist to ensure that REDCap is used appropriately, securely, and in line with licensing, governance, and data protection requirements.
+The REDCap administrative functions ensure that REDCap is used appropriately, securely, and in line with licensing, governance (especially data governance, which differs between Caribbean territories), and data protection requirements.
 
 ## Administrative role and scope
 
-REDCap administrators (sometimes referred to as “superusers”) are responsible for the configuration and oversight of the REDCap system itself. This role is distinct from that of project managers, who control activity within individual projects.
+REDCap administrators (who have the highest level of front-end access) are responsible for the configuration and oversight of the REDCap system itself. This role is distinct from that of project managers, who control activity within individual projects.
 
 Administrative responsibilities include user *account management*, *approval of projects and elevated functions*, and *oversight of the project lifecycle*.
 
-## User account management
+### User account management
 
-All user accounts are created and managed centrally. Requests for access are submitted via the designated REDCap support email and should clearly state:
+All user accounts are created and managed centrally. Requests for access are submitted via the designated REDCap support email---currently: [redcap@cavehill.uwi.edu](mailto:redcap@cavehill.uwi.edu) and should clearly state:
 
 - the user’s affiliation, 
 - intended use of REDCap, 
 - whether they are joining an existing project or proposing a new one.
 
-Administrators are responsible for ensuring that:
+::: {.callout-note} 
+#### User Sponsors 
+If a current project owner wants to add new system users, the email request should come from the project owner. That project owner would then be setup as a *user sponsor* and have access to a sponsor dashboard for automating certain user related activities. 
+:::
+
+ Administrators are responsible for ensuring that:
 
 - accounts are issued only to identifiable individuals;
-- accounts use appropriate institutional or approved email addresses;
+- accounts use appropriate institutional or approved email addresses whenever possible;
 - access is removed or suspended promptly when affiliation ends;
-- account expiration dates are used where appropriate.
+- account expiration dates are used *in all cases*.
 
 Shared or generic accounts are not permitted, as they undermine auditability and accountability.
 
-## Project creation and approval
+### Project creation and approval
 
-New projects require administrative approval before they are created or activated. This step ensures that projects are correctly classified (for example, research versus operational use) and that basic governance expectations are understood by project owners.
+New projects require administrative approval before they are created or activated. This step ensures that projects are correctly classified (for example, research versus operational use), certain additional project-level metadata are collected, and that basic governance expectations are understood by project owners.
 
-Administrators should confirm that project managers understand their responsibilities for user management, data handling, and compliance within their projects.
+Administrators should confirm that project owners/managers understand their responsibilities for user management, data handling, and compliance within their projects. This responsibility work has generally been performed as part of the onboarding process - whenever a new user is created or a new project created. 
 
-## Project lifecycle control
+### Project lifecycle control
 
 Administrators control key transitions in the project lifecycle, including:
 
@@ -56,10 +63,10 @@ Project deletion is irreversible and should only occur after confirming data ret
 
 Certain REDCap functions require explicit administrative approval because they introduce additional risk or system-level impact. These include *API access*, *activation of external modules*, *enabling mobile data collection*, and approval of *advanced project features*.
 
-Administrative decisions should follow the principle of least privilege and be documented where appropriate.
+Administrative decisions should follow the principle of least privilege, with additional privileges documented at all times.
 
 ## Oversight and routine checks
 
-As part of normal operations, administrators should periodically review user accounts, project status, and system logs to identify inactive users, stalled projects, or unusual patterns of data export or access.
+As part of normal operations, administrators should periodically review user accounts, project status, and system logs to identify inactive users, stalled projects, or unusual patterns of data export or access. Those periodic reviews should be part of a system maintenance log.
 
 These checks support institutional accountability and reduce the risk of unnoticed misuse.
